Added support in distributed builds across Windows and Linux